# patina-dxe-core-qemu

./: Cargo.toml  cspell.yml
.github/workflows/: publish-binaries.yml
src/q35/: timer.rs
src/q35/component/service/: smbios_platform.rs  smbios_test.rs
