[package]
name = "qemu_dxe_core"
version = "2.1.2"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "qemu_q35_dxe_core"
path = "bin/q35_dxe_core.rs"
required-features = ["x64"]

[[bin]]
name = "qemu_sbsa_dxe_core"
path = "bin/sbsa_dxe_core.rs"
required-features = ["aarch64"]

[lib]
name = "qemu_resources"
path = "src/lib.rs"

[dependencies]
log = { version = "^0.4", default-features = false, features = [
    "release_max_level_warn",
] }
patina_adv_logger = { path = "../patina/components/patina_adv_logger" }
patina_boot = { path = "../patina/components/patina_boot" }
patina_debugger = { path = "../patina/core/patina_debugger" }
patina_dxe_core = { path = "../patina/patina_dxe_core" }
patina_mm = { path = "../patina/components/patina_mm" }
patina_performance = { path = "../patina/components/patina_performance" }
patina_samples = { path = "../patina/components/patina_samples" }
patina = { path = "../patina/sdk/patina", features = ["enable_patina_tests", "unstable-device-path"] }
patina_ffs_extractors = { path = "../patina/sdk/patina_ffs_extractors" }
patina_stacktrace = { path = "../patina/core/patina_stacktrace" }
r-efi = { version = "^5", default-features = false }
x86_64 = { version = "=0.15.2", default-features = false, features = [
  "instructions"
], optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

# These release settings reduce the qemu binary size significantly(~35%).
[profile.release]
codegen-units = 1
debug = "full"
lto = true
opt-level = "s"
split-debuginfo = "packed"
strip = "symbols"
incremental = true

[profile.dev]
opt-level = "s"

[profile.test]
opt-level = 0

[features]
default = ["compatibility_mode_allowed"]
compatibility_mode_allowed = ["patina_dxe_core/compatibility_mode_allowed"]
x64 = ["x86_64"]
aarch64 = []
doc = []
std = []
build_debugger = []
enable_debugger = ["build_debugger"]

[patch.crates-io]
patina_adv_logger={path="/home/katperez/current/patina-boot/patina/components/patina_adv_logger"}
patina={path="/home/katperez/current/patina-boot/patina/sdk/patina"}
patina_macro={path="/home/katperez/current/patina-boot/patina/sdk/patina_macro"}
patina_dxe_core={path="/home/katperez/current/patina-boot/patina/patina_dxe_core"}
patina_debugger={path="/home/katperez/current/patina-boot/patina/core/patina_debugger"}
patina_internal_cpu={path="/home/katperez/current/patina-boot/patina/core/patina_internal_cpu"}
patina_stacktrace={path="/home/katperez/current/patina-boot/patina/core/patina_stacktrace"}
patina_ffs={path="/home/katperez/current/patina-boot/patina/sdk/patina_ffs"}
patina_internal_collections={path="/home/katperez/current/patina-boot/patina/core/patina_internal_collections"}
patina_internal_depex={path="/home/katperez/current/patina-boot/patina/core/patina_internal_depex"}
patina_internal_device_path={path="/home/katperez/current/patina-boot/patina/core/patina_internal_device_path"}
patina_performance={path="/home/katperez/current/patina-boot/patina/components/patina_performance"}
patina_mm={path="/home/katperez/current/patina-boot/patina/components/patina_mm"}
patina_ffs_extractors={path="/home/katperez/current/patina-boot/patina/sdk/patina_ffs_extractors"}
patina_samples={path="/home/katperez/current/patina-boot/patina/components/patina_samples"}
patina_smbios={path="/home/katperez/current/patina-boot/patina/components/patina_smbios"}
patina_boot={path="/home/katperez/current/patina-boot/patina/components/patina_boot"}